Fix sidebar wrapping issues

--- a/site/static/res/css/style.css
+++ b/site/static/res/css/style.css
@@ -2546,7 +2546,7 @@
     color: rgba(255, 255, 255, 0.4);
     height: 100%;
     left: 0;
-    padding: 8em 4em 8em 1em;
+    padding: 8em 2em 8em 1em;
     position: fixed;
     text-align: right;
     top: 0;
